--- a/main.css
+++ b/main.css
@@ -27,3 +27,19 @@ header {
 .search:focus{
     outline: none;
 }
+main{
+    display: flex;
+    flex-wrap: wrap;
+}
+.movie{
+    width: 300px;
+    margin: 1rem;
+    background-color:var(--primary-color);
+    box-shadow:0 4px 5px rgba(red, green, blue, alpha);
+    position: relative;
+    overflow: hidden;
+    border-radius: 3px;
+}
+.movie img{
+    width: 100%;
+}
