--- a/main.css
+++ b/main.css
@@ -21,8 +21,8 @@ header {
     background-color: white;
     border: 2px solid var(--secondary-color);
     border-radius: 50px;
-    font-size: 2rem;
-    padding: 1rem
+    font-size: 1rem;
+    padding: 1rem;
 }
 .search:focus{
     outline: none;
@@ -35,7 +35,7 @@ main{
     width: 300px;
     margin: 1rem;
     background-color:var(--primary-color);
-    box-shadow:0 4px 5px rgba(red, green, blue, alpha);
+    box-shadow:0 4px 5px rgba(0,0,0,0.2);
     position: relative;
     overflow: hidden;
     border-radius: 3px;
