--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #026A90;
+    --primary-color: ;
     --secondary-color: white;
 }
 * {
@@ -57,6 +57,18 @@ main{
     border-radius: 3px;
     font-weight: bold;
 }
+.movie-info span.green{
+    color: lightgreen;
+     
+}
+.movie-info span.orange{
+    color: orange;
+     
+}
+.movie-info span.red{
+    color: red   ;
+     
+}
 .overview{
     background-color: var(--secondary-color);
     color: var(--primary-color);
@@ -66,5 +78,9 @@ main{
     right: 0;
     bottom: 0;
     max-height: 100%;
-    
+    transform: translateY(101%);
+    transition: transform 0.3s ease;
+}
+.movie:hover .overview{
+    transform: translateY(0);
 }
