--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color:  blue;
-    --secondary-color: brown;
+    --primary-color: blue;
+    --secondary-color: rgb(153, 165, 42);
 }
 * {
     box-sizing: border-box;
@@ -12,21 +12,27 @@ body{
     margin: 0;
 }
 header {
-    padding: 1rem;
+    padding: o.5rem;
     display: flex;
-    justify-content: center;
+    justify-content: right;
     background-color: var(--primary-color);
 }
 newEvent{
+    font-style: italic;
+    vertical-align: text-top;
+
+    background-color: greenyellow;
+    color: brown;
     
-position: relative;
+
 }
 .search{
     background-color: white;
-    border: 2px solid var(--secondary-color);
+    border: 2px  var(--secondary-color);
     border-radius: 50px;
     font-size: 1rem;
     padding: 1rem;
+    margin: 1rem;
 }
 .search:focus{
     outline: none;
@@ -36,7 +42,7 @@ main{
     flex-wrap: wrap;
 }
 .movie{
-    width: 300px;
+    width: 280px;
     margin: 1rem;
     background-color:var(--primary-color);
     box-shadow:0 4px 5px rgba(0,0,0,0.2);
@@ -57,7 +63,7 @@ main{
 }
 .movie-info span{
    background-color: var(--primary-color);
-    padding: 0.25rem 0.5rem;
+    padding: 0.25rem 0.5rem 0.5rem;
     border-radius: 3px;
     font-weight: bold;
 }
